# Argentum-Taller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.supp  cmake_install.cmake
Client/: Animation.h  Font.cpp  Font.h  Music.cpp  Music.h  MusicID.h  MusicManager.cpp  MusicManager.h  SDL  SDLException.cpp  SDLException.h  SDLMusic.cpp  SDLMusic.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h  Texture.cpp  Texture.h  TextureID.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  Zombie.h  client  client.supp  client_main.cpp
Client/assets/img/: .~lock.Zombie Cuerpo Sprite.png#
Server/: Arma.cpp  Arma.h  Ataque.h  Casillero.cpp  Casillero.h  Clase.h  Criatura.h  Defensa.cpp  Defensa.h  Ecuacion.cpp  Ecuacion.h  Estado.h  Excepciones.h  Movimiento.h  NPC.h  StatsJuego.cpp  Tablero.cpp  Tablero.h  testCasillero.cpp
docs/demo/: Requerimientos de Sistema.docx
include/rapidjson/: document.h  pointer.h  rapidjson.h  stream.h
include/rapidjson/error/: error.h
include/rapidjson/internal/: strfunc.h
json/: arbol1.json  arena.json  bigMapCollisions.json  bigMapNPC.json  finishedMap.json  gameStats.json  pasto.json  tiledMap.json
src/: JsonReader.cpp  JsonReader.h  MapTransformer.cpp  MapTransformer.h
src/Client/: Animation.cpp  Animation.h  Banker.cpp  Chrono.h  GameMap.cpp  GameMap.h  Goblin.h  Layer.h  Makefile  Music.cpp  MusicManager.cpp  Player.cpp  Player.h  Point.cpp  Presentation.cpp  Presentation.h  Texture.cpp  TextureManager.cpp  Tile.cpp  TileSet.h  TileSetMap.cpp  TiledMap.cpp  TiledMap.h  Window.h  Zombie.cpp  client_main.cpp
src/Client/CharacterStates/: StillState.h
src/Client/Items/: BankerBody.h  BlueCommonBody.cpp  BlueTunic.h  DwarfHead.cpp  DwarfHead.h  ElfHead.cpp  ElfHead.h  GhostBody.h  GnomeHead.cpp  GoblinBody.h  IronHelmet.h  Item.h  LeatherArmor.cpp  MerchantBody.h  PlateArmor.cpp  PriestHead.cpp  RedCommonBody.cpp  RedCommonBody.h  SkeletonBody.cpp  SpiderBody.cpp
src/Server/: Ataque.cpp  Movimiento.cpp  NPC.h  ObjetoJuego.h  Personaje.cpp  Posicion.cpp  Raza.cpp  StatsJuego.h  testCasillero.cpp  testPersonaje.cpp
src/client/: Banker.h  Button.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Chrono.cpp  Dispatcher.cpp  Dispatcher.h  Effect.cpp  Effect.h  Font.cpp  Font.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  Goblin.cpp  Layer.cpp  MapObject.cpp  MapObject.h  Merchant.cpp  Merchant.h  Music.cpp  Music.h  MusicID.h  MusicManager.cpp  MusicManager.h  NPC.cpp  NPC.h  ObjectLayer.cpp  ObjectLayer.h  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h  Point.h  Presentation.cpp  Presentation.h  Priest.cpp  (+30 more)
src/client/Items/: Animation.cpp  Animation.h  AshStick.cpp  AshStick.h  Ax.cpp  Ax.h  BankerBody.cpp  BankerBody.h  BlueCommonBody.cpp  BlueCommonBody.h  BlueTunic.cpp  BlueTunic.h  Body.cpp  Body.h  CompoundArc.cpp  CompoundArc.h  Crosier.cpp  Crosier.h  CureAnimation.cpp  CureAnimation.h  DwarfHead.cpp  DwarfHead.h  ElfHead.cpp  ElfHead.h  ElficFlaute.cpp  ElficFlaute.h  ExplotionAnimation.cpp  ExplotionAnimation.h  GhostBody.cpp  GhostBody.h  GnarledStick.cpp  GnarledStick.h  GnomeHead.cpp  GnomeHead.h  GoblinBody.cpp  GoblinBody.h  GreenCommonBody.cpp  GreenCommonBody.h  Hammer.cpp  Hammer.h  (+52 more)
src/client/characterStates/: AttackState.cpp  AttackState.h  CharacterState.h  CharacterStatesID.h  DeadState.cpp  DeadState.h  InteractState.cpp  InteractState.h  MeditateState.cpp  MeditateState.h  MoveState.cpp  MoveState.h  ResurrectState.cpp  ResurrectState.h  StartMovingState.cpp  StartMovingState.h  StillState.cpp  StillState.h
src/client/ui/: ArrowButton.cpp  ArrowButton.h  BankerInterface.cpp  BankerInterface.h  Button.cpp  Button.h  BuyButton.cpp  BuyButton.h  CureButton.cpp  CureButton.h  DepositGoldButton.cpp  DepositGoldButton.h  DepositItemButton.cpp  DepositItemButton.h  DropButton.cpp  DropButton.h  EquipButton.cpp  EquipButton.h  MerchantInterface.cpp  MerchantInterface.h  NPCInterface.cpp  NPCInterface.h  PriestInterface.cpp  PriestInterface.h  RaisedButton.cpp  RaisedButton.h  ResurrectButton.cpp  ResurrectButton.h  RetireGoldButton.cpp  RetireGoldButton.h  RetireItemButton.cpp  RetireItemButton.h  SelectButton.cpp  SelectButton.h  SellButton.cpp  SellButton.h  UI.cpp  UI.h  UnequipButton.cpp  UnequipButton.h
src/common/: BlockingQueue.h  Board.cpp  Board.h  BoardPosition.h  Collider.cpp  Collider.h  CommunicationProtocol.cpp  CommunicationProtocol.h  ConfigFileTransformer.cpp  ConfigFileTransformer.h  Creature.cpp  Creature.h  DataQueue.h  Decoder.cpp  Decoder.h  EventQueue.h  Exception.cpp  Exception.h  GameCharacter.cpp  GameCharacter.h  GameObject.cpp  GameObject.h  GameObjectInfo.cpp  GameObjectInfo.h  GameObjectsContainer.cpp  GameObjectsContainer.h  GameStats.h  GameStatsConfig.cpp  GameStatsConfig.h  Identificators.h  InputQueue.h  JsonReader.cpp  JsonReader.h  MapObject.cpp  MapObject.h  MapTransformer.cpp  MapTransformer.h  Message.cpp  Message.h  MoveStateCreature.cpp  (+50 more)
src/server/: Arma.h  Ataque.cpp  Ataque.h  AttackStateCreature.cpp  AttackStateCreature.h  Banker.cpp  Banker.h  Board.cpp  Board.h  BoardPosition.cpp  BoardPosition.h  Cell.cpp  Cell.h  Character.cpp  Character.h  City.cpp  City.h  Clase.cpp  Collider.cpp  Collider.h  Creature.cpp  Creature.h  Criatura.cpp  Criatura.h  Defensa.cpp  Defensa.h  DropItem.cpp  DropItem.h  Estado.cpp  Estado.h  Excepciones.cpp  GameCharacter.cpp  GameCharacter.h  GameObject.cpp  GameObject.h  GameObjectsContainer.cpp  GameObjectsContainer.h  GameStats.h  GameStatsConfig.cpp  GameStatsConfig.h  (+74 more)
src/server/states/: AttackStateCharacter.cpp  AttackStateCharacter.h  AttackStateCreature.cpp  AttackStateCreature.h  DeadStateCharacter.cpp  DeadStateCharacter.h  DeadStateCreature.cpp  DeadStateCreature.h  EquipStateCharacter.cpp  EquipStateCharacter.h  InteractStateCharacter.cpp  InteractStateCharacter.h  MeditateStateCharacter.cpp  MeditateStateCharacter.h  MoveStateCharacter.cpp  MoveStateCharacter.h  MoveStateCreature.cpp  MoveStateCreature.h  PursuitStateCreature.cpp  PursuitStateCreature.h  ResurrectStateCharacter.cpp  (+23 more)
